--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -138,7 +138,7 @@
             </div>
 
             <h4><a href="https://pivovarit.github.io">Grzegorz Piwowarek</a></h4>
-            <h5><a href="https://twitter.com/pivovarit">@pivowarit</a></h5>
+            <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
         </section>
 
 
