--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="reveal">
-    <div class="footer"><a href="http://twitter.com/pivovarit">@pivovarit</a></div>
+    <div class="footer"><a href="https://x.com/pivovarit">@pivovarit</a></div>
 
     <div class="slides">
         <section>
@@ -42,41 +42,10 @@
                                 fill-opacity: 0.9;
                             }
 
-                            @keyframes p1 {
-                                0%   { opacity: 1; }
-                                10%  { opacity: 1; }
-                                20%  { opacity: 0; }
-                                55%  { opacity: 0; }
-                                70%  { opacity: 1; }
-                                100% { opacity: 1; }
-                            }
-
-                            @keyframes p2 {
-                                0%   { opacity: 1; }
-                                15%  { opacity: 1; }
-                                30%  { opacity: 0; }
-                                60%  { opacity: 0; }
-                                80%  { opacity: 1; }
-                                100% { opacity: 1; }
-                            }
-
-                            @keyframes p3 {
-                                0%   { opacity: 1; }
-                                25%  { opacity: 1; }
-                                45%  { opacity: 0; }
-                                70%  { opacity: 0; }
-                                90%  { opacity: 1; }
-                                100% { opacity: 1; }
-                            }
-
-                            @keyframes p4 {
-                                0%   { opacity: 1; }
-                                20%  { opacity: 1; }
-                                40%  { opacity: 0; }
-                                65%  { opacity: 0; }
-                                85%  { opacity: 1; }
-                                100% { opacity: 1; }
-                            }
+                            @keyframes p1 {0%{opacity:1}10%{opacity:1}20%{opacity:0}55%{opacity:0}70%{opacity:1}100%{opacity:1}}
+                            @keyframes p2 {0%{opacity:1}15%{opacity:1}30%{opacity:0}60%{opacity:0}80%{opacity:1}100%{opacity:1}}
+                            @keyframes p3 {0%{opacity:1}25%{opacity:1}45%{opacity:0}70%{opacity:0}90%{opacity:1}100%{opacity:1}}
+                            @keyframes p4 {0%{opacity:1}20%{opacity:1}40%{opacity:0}65%{opacity:0}85%{opacity:1}100%{opacity:1}}
 
                             .p1 { animation: p1 15s linear infinite; }
                             .p2 { animation: p2 18s linear infinite; }
@@ -113,26 +82,90 @@
                     <path id="pBE" class="link p4" d="M257 70 L243 225"/>
                     <path id="pEB" class="link p4" d="M243 225 L257 70"/>
 
-                    <circle class="msg" r="4"><animateMotion dur="2.6s" begin="1.1s" repeatCount="indefinite"><mpath href="#pAB"/></animateMotion></circle>
-                    <circle class="msg" r="4"><animateMotion dur="3.9s" begin="-0.8s" repeatCount="indefinite"><mpath href="#pBA"/></animateMotion></circle>
+                    <circle class="msg" r="4">
+                        <animateMotion dur="2.6s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pAB"/>
+                        </animateMotion>
+                    </circle>
 
-                    <circle class="msg p1" r="4"><animateMotion dur="2.8s" begin="-1.3s" repeatCount="indefinite"><mpath href="#pBC"/></animateMotion></circle>
-                    <circle class="msg p1" r="4"><animateMotion dur="4.2s" begin="2.6s" repeatCount="indefinite"><mpath href="#pCB"/></animateMotion></circle>
+                    <circle class="msg" r="4">
+                        <animateMotion dur="3.9s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pBA"/>
+                        </animateMotion>
+                    </circle>
 
-                    <circle class="msg p2" r="4"><animateMotion dur="3.1s" begin="0.7s" repeatCount="indefinite"><mpath href="#pCD"/></animateMotion></circle>
-                    <circle class="msg p2" r="4"><animateMotion dur="4.4s" begin="-3.7s" repeatCount="indefinite"><mpath href="#pDC"/></animateMotion></circle>
+                    <circle class="msg p1" r="4">
+                        <animateMotion dur="2.8s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pBC"/>
+                        </animateMotion>
+                    </circle>
 
-                    <circle class="msg" r="4"><animateMotion dur="2.9s" begin="1.8s" repeatCount="indefinite"><mpath href="#pDE"/></animateMotion></circle>
-                    <circle class="msg" r="4"><animateMotion dur="4.1s" begin="-1.5s" repeatCount="indefinite"><mpath href="#pED"/></animateMotion></circle>
+                    <circle class="msg p1" r="4">
+                        <animateMotion dur="4.2s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pCB"/>
+                        </animateMotion>
+                    </circle>
 
-                    <circle class="msg p3" r="4"><animateMotion dur="3.0s" begin="-2.0s" repeatCount="indefinite"><mpath href="#pEF"/></animateMotion></circle>
-                    <circle class="msg p3" r="4"><animateMotion dur="4.5s" begin="1.2s" repeatCount="indefinite"><mpath href="#pFE"/></animateMotion></circle>
+                    <circle class="msg p2" r="4">
+                        <animateMotion dur="3.1s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pCD"/>
+                        </animateMotion>
+                    </circle>
 
-                    <circle class="msg" r="4"><animateMotion dur="3.3s" begin="2.4s" repeatCount="indefinite"><mpath href="#pFA"/></animateMotion></circle>
-                    <circle class="msg" r="4"><animateMotion dur="4.6s" begin="-2.3s" repeatCount="indefinite"><mpath href="#pAF"/></animateMotion></circle>
+                    <circle class="msg p2" r="4">
+                        <animateMotion dur="4.4s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pDC"/>
+                        </animateMotion>
+                    </circle>
 
-                    <circle class="msg p4" r="4"><animateMotion dur="2.7s" begin="-0.5s" repeatCount="indefinite"><mpath href="#pBE"/></animateMotion></circle>
-                    <circle class="msg p4" r="4"><animateMotion dur="4.2s" begin="3.0s" repeatCount="indefinite"><mpath href="#pEB"/></animateMotion></circle>
+                    <circle class="msg" r="4">
+                        <animateMotion dur="2.9s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pDE"/>
+                        </animateMotion>
+                    </circle>
+
+                    <circle class="msg" r="4">
+                        <animateMotion dur="4.1s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pED"/>
+                        </animateMotion>
+                    </circle>
+
+                    <circle class="msg p3" r="4">
+                        <animateMotion dur="3.0s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pEF"/>
+                        </animateMotion>
+                    </circle>
+
+                    <circle class="msg p3" r="4">
+                        <animateMotion dur="4.5s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pFE"/>
+                        </animateMotion>
+                    </circle>
+
+                    <circle class="msg" r="4">
+                        <animateMotion dur="3.3s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pFA"/>
+                        </animateMotion>
+                    </circle>
+
+                    <circle class="msg" r="4">
+                        <animateMotion dur="4.6s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pAF"/>
+                        </animateMotion>
+                    </circle>
+
+                    <circle class="msg p4" r="4">
+                        <animateMotion dur="2.7s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pBE"/>
+                        </animateMotion>
+                    </circle>
+
+                    <circle class="msg p4" r="4">
+                        <animateMotion dur="4.2s" begin="0.001s" repeatCount="indefinite" fill="freeze">
+                            <mpath href="#pEB"/>
+                        </animateMotion>
+                    </circle>
+
                 </svg>
 
             </div>
