--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -42,15 +42,15 @@
                                 fill-opacity: 0.9;
                             }
 
-                            @keyframes p1 {0%{opacity:1}10%{opacity:1}20%{opacity:0}55%{opacity:0}70%{opacity:1}100%{opacity:1}}
-                            @keyframes p2 {0%{opacity:1}15%{opacity:1}30%{opacity:0}60%{opacity:0}80%{opacity:1}100%{opacity:1}}
-                            @keyframes p3 {0%{opacity:1}25%{opacity:1}45%{opacity:0}70%{opacity:0}90%{opacity:1}100%{opacity:1}}
-                            @keyframes p4 {0%{opacity:1}20%{opacity:1}40%{opacity:0}65%{opacity:0}85%{opacity:1}100%{opacity:1}}
+                            @keyframes p1 {0%,15%{opacity:1}20%,30%{opacity:0}35%,100%{opacity:1}}
+                            @keyframes p2 {0%,30%{opacity:1}35%,45%{opacity:0}50%,100%{opacity:1}}
+                            @keyframes p3 {0%,45%{opacity:1}50%,60%{opacity:0}65%,100%{opacity:1}}
+                            @keyframes p4 {0%,60%{opacity:1}65%,75%{opacity:0}80%,100%{opacity:1}}
 
-                            .p1 { animation: p1 15s linear infinite; }
-                            .p2 { animation: p2 18s linear infinite; }
-                            .p3 { animation: p3 14s linear infinite; }
-                            .p4 { animation: p4 17s linear infinite; }
+                            .p1 { animation: p1 16s linear infinite; }
+                            .p2 { animation: p2 16s linear infinite; }
+                            .p3 { animation: p3 16s linear infinite; }
+                            .p4 { animation: p4 16s linear infinite; }
                         </style>
                     </defs>
 
