--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -42,15 +42,18 @@
                                 fill-opacity: 0.9;
                             }
 
-                            @keyframes p1 {0%,15%{opacity:1}20%,30%{opacity:0}35%,100%{opacity:1}}
-                            @keyframes p2 {0%,30%{opacity:1}35%,45%{opacity:0}50%,100%{opacity:1}}
-                            @keyframes p3 {0%,45%{opacity:1}50%,60%{opacity:0}65%,100%{opacity:1}}
-                            @keyframes p4 {0%,60%{opacity:1}65%,75%{opacity:0}80%,100%{opacity:1}}
+                            @keyframes p1 {0%,12%{opacity:1}17%,28%{opacity:0}33%,42%{opacity:1}47%,57%{opacity:0}62%,100%{opacity:1}}
+                            @keyframes p2 {0%,18%{opacity:1}23%,35%{opacity:0}40%,52%{opacity:1}57%,70%{opacity:0}75%,100%{opacity:1}}
+                            @keyframes p3 {0%,22%{opacity:1}27%,40%{opacity:0}45%,60%{opacity:1}65%,78%{opacity:0}83%,100%{opacity:1}}
+                            @keyframes p4 {0%,28%{opacity:1}33%,48%{opacity:0}53%,68{opacity:1}73%,88%{opacity:0}93%,100%{opacity:1}}
+                            @keyframes p5 {0%,30%{opacity:1}34%,35%{opacity:0}40%,52%{opacity:1}57%,70%{opacity:0}75%,100%{opacity:1}}
 
-                            .p1 { animation: p1 16s linear infinite; }
-                            .p2 { animation: p2 16s linear infinite; }
-                            .p3 { animation: p3 16s linear infinite; }
-                            .p4 { animation: p4 16s linear infinite; }
+
+                            .p1 { animation: p1 38s linear infinite; }
+                            .p2 { animation: p2 42s linear infinite; }
+                            .p3 { animation: p3 46s linear infinite; }
+                            .p4 { animation: p4 50s linear infinite; }
+                            .p5 { animation: p5 27s linear infinite; }
                         </style>
                     </defs>
 
@@ -70,8 +73,8 @@
                     <path id="pCD" class="link p2" d="M419 112 L391 213"/>
                     <path id="pDC" class="link p2" d="M391 213 L419 112"/>
 
-                    <path id="pDE" class="link" d="M360 230 L260 245"/>
-                    <path id="pED" class="link" d="M260 245 L360 230"/>
+                    <path id="pDE" class="link p5" d="M360 230 L260 245"/>
+                    <path id="pED" class="link p5" d="M260 245 L360 230"/>
 
                     <path id="pEF" class="link p3" d="M220 241 L115 205"/>
                     <path id="pFE" class="link p3" d="M115 205 L220 241"/>
@@ -118,13 +121,13 @@
                         </animateMotion>
                     </circle>
 
-                    <circle class="msg" r="4">
+                    <circle class="msg p5" r="4">
                         <animateMotion dur="2.9s" begin="0.33s" repeatCount="indefinite" fill="freeze">
                             <mpath href="#pDE"/>
                         </animateMotion>
                     </circle>
 
-                    <circle class="msg" r="4">
+                    <circle class="msg p5" r="4">
                         <animateMotion dur="4.1s" begin="1.4s" repeatCount="indefinite" fill="freeze">
                             <mpath href="#pED"/>
                         </animateMotion>
@@ -171,7 +174,6 @@
             </div>
 
             <h4><a href="https://pivovarit.github.io">Grzegorz Piwowarek</a></h4>
-            <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
         </section>
 
 
