--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -64,8 +64,8 @@
                     <circle cx="240" cy="245" r="20" class="node"/>
                     <circle cx="95" cy="200" r="20" class="node"/>
 
-                    <path id="pAB" class="link" d="M115 62 L240 53"/>
-                    <path id="pBA" class="link" d="M240 53 L115 62"/>
+                    <path id="pAB" class="link p2" d="M115 62 L240 53"/>
+                    <path id="pBA" class="link p2" d="M240 53 L115 62"/>
 
                     <path id="pBC" class="link p1" d="M280 53 L410 86"/>
                     <path id="pCB" class="link p1" d="M410 86 L280 53"/>
@@ -79,19 +79,19 @@
                     <path id="pEF" class="link p3" d="M220 241 L115 205"/>
                     <path id="pFE" class="link p3" d="M115 205 L220 241"/>
 
-                    <path id="pFA" class="link" d="M95 180 L95 85"/>
-                    <path id="pAF" class="link" d="M95 85 L95 180"/>
+                    <path id="pFA" class="link p1" d="M95 180 L95 85"/>
+                    <path id="pAF" class="link p1" d="M95 85 L95 180"/>
 
                     <path id="pBE" class="link p4" d="M257 70 L243 225"/>
                     <path id="pEB" class="link p4" d="M243 225 L257 70"/>
 
-                    <circle class="msg" r="4">
+                    <circle class="msg p2" r="4">
                         <animateMotion dur="2.6s" begin="0.1s" repeatCount="indefinite" fill="freeze">
                             <mpath href="#pAB"/>
                         </animateMotion>
                     </circle>
 
-                    <circle class="msg" r="4">
+                    <circle class="msg p2" r="4">
                         <animateMotion dur="3.9s" begin="0.42s" repeatCount="indefinite" fill="freeze">
                             <mpath href="#pBA"/>
                         </animateMotion>
@@ -145,13 +145,13 @@
                         </animateMotion>
                     </circle>
 
-                    <circle class="msg" r="4">
+                    <circle class="msg p1" r="4">
                         <animateMotion dur="3.3s" begin="0.67s" repeatCount="indefinite" fill="freeze">
                             <mpath href="#pFA"/>
                         </animateMotion>
                     </circle>
 
-                    <circle class="msg" r="4">
+                    <circle class="msg p1" r="4">
                         <animateMotion dur="4.6s" begin="1.3s" repeatCount="indefinite" fill="freeze">
                             <mpath href="#pAF"/>
                         </animateMotion>
