--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -42,18 +42,18 @@
                                 fill-opacity: 0.9;
                             }
 
-                            @keyframes p1 {0%,12%{opacity:1}17%,28%{opacity:0}33%,42%{opacity:1}47%,57%{opacity:0}62%,100%{opacity:1}}
-                            @keyframes p2 {0%,18%{opacity:1}23%,35%{opacity:0}40%,52%{opacity:1}57%,70%{opacity:0}75%,100%{opacity:1}}
-                            @keyframes p3 {0%,22%{opacity:1}27%,40%{opacity:0}45%,60%{opacity:1}65%,78%{opacity:0}83%,100%{opacity:1}}
-                            @keyframes p4 {0%,28%{opacity:1}33%,48%{opacity:0}53%,68{opacity:1}73%,88%{opacity:0}93%,100%{opacity:1}}
-                            @keyframes p5 {0%,30%{opacity:1}34%,35%{opacity:0}40%,52%{opacity:1}57%,70%{opacity:0}75%,100%{opacity:1}}
+                            @keyframes p1 {0%,12%{opacity:1}17%,42%{opacity:1}47%,57%{opacity:0}62%,100%{opacity:1}}
+                            @keyframes p2 {0%,18%{opacity:1}23%,52%{opacity:1}57%,70%{opacity:0}75%,100%{opacity:1}}
+                            @keyframes p3 {0%,22%{opacity:1}27%,60%{opacity:1}65%,78%{opacity:0}83%,100%{opacity:1}}
+                            @keyframes p4 {0%,28%{opacity:1}33%,68%{opacity:1}73%,88%{opacity:0}93%,100%{opacity:1}}
+                            @keyframes p5 {0%,30%{opacity:1}34%,52%{opacity:1}57%,70%{opacity:0}75%,100%{opacity:1}}
 
 
-                            .p1 { animation: p1 38s linear infinite; }
-                            .p2 { animation: p2 42s linear infinite; }
-                            .p3 { animation: p3 46s linear infinite; }
-                            .p4 { animation: p4 50s linear infinite; }
-                            .p5 { animation: p5 27s linear infinite; }
+                            .p1 { animation: p1 58s linear infinite; }
+                            .p2 { animation: p2 62s linear infinite; }
+                            .p3 { animation: p3 66s linear infinite; }
+                            .p4 { animation: p4 70s linear infinite; }
+                            .p5 { animation: p5 57s linear infinite; }
                         </style>
                     </defs>
 
