--- a/talks/prawo-vs-ai/index.html
+++ b/talks/prawo-vs-ai/index.html
@@ -134,15 +134,6 @@
             </ul>
         </section>
 
-
-        <section>
-            <h2>Text & Data Mining</h2>
-
-            <ul>
-                <li>Analiza zbiorów danych w celu wykrycia wzorców i relacji</li>
-            </ul>
-        </section>
-
         <section>
             <h2>Jak wyłączyć indeksację/analizę stron?</h2>
 
@@ -195,11 +186,12 @@ Disallow: /sekretny-plik.html
             <h5>wprowadzane są cechy, które powodują, że model AI ma mniejszą wartość z treści (np. trudniejsze tokenizacyjnie konstrukcje).</h5>
         </section>
 
-
+        <section>
+            <h3>Skoro nie możemy skutecznie się bronić... to po co wszystko?</h3>
+        </section>
 
         <section>
-            <h5>Gdzie kończą się prawa twórców, a zaczyna dozwolony użytek?</h5>
-
+            <h3>Ochrona prawna</h3>
             <blockquote>The 9th Circuit ruled that hiQ had the right to do web scraping. (...)</blockquote>
             <blockquote>In November 2022 the U.S. District Court for the Northern District of California ruled that hiQ
                 had breached LinkedIn's User Agreement
@@ -208,7 +200,12 @@ Disallow: /sekretny-plik.html
         </section>
 
         <section>
+            <h5>Gdzie kończą się prawa twórców, a zaczyna dozwolony użytek?</h5>
             <img src="img/opt-out-w-praktyce.png" width="80%" alt="meta-ai"/>
+        </section>
+
+        <section>
+            ...
         </section>
 
         <section>
